eks-app/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-main-svc
  namespace: k8s-frontend
spec:
  selector:
    app: main-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.20
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-index-svc
  namespace: k8s-frontend
spec:
  selector:
    app: index-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.40
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-signup-svc
  namespace: k8s-frontend
spec:
  selector:
    app: signup-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.60
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-login-svc
  namespace: k8s-frontend
spec:
  selector:
    app: login-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-order-svc
  namespace: k8s-frontend
spec:
  selector:
    app: order-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.100
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-reservation-svc
  namespace: k8s-frontend
spec:
  selector:
    app: reservation-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.120
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-reservationinfo-svc
  namespace: k8s-frontend
spec:
  selector:
    app: reservationinfo-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.140
