eks-app/k8s/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tommain-svc
  namespace: k8s-backend
spec:
  selector:
    app: main-app
  type: ClusterIP
  clusterIP: 172.20.10.10
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tomindex-svc
  namespace: k8s-backend
spec:
  selector:
    app: index-app
  type: ClusterIP
  clusterIP: 172.20.10.30
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tomsignup-svc
  namespace: k8s-backend
spec:
  selector:
    app: signup-app
  type: ClusterIP
  clusterIP: 172.20.10.50
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tomlogin-svc
  namespace: k8s-backend
spec:
  selector:
    app: login-app
  type: ClusterIP
  clusterIP: 172.20.10.70
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tomorder-svc
  namespace: k8s-backend
spec:
  selector:
    app: order-app
  type: ClusterIP
  clusterIP: 172.20.10.90
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tomreservation-svc
  namespace: k8s-backend
spec:
  selector:
    app: reservation-app
  type: ClusterIP
  clusterIP: 172.20.10.110
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-trd-tomreservationinfo-svc
  namespace: k8s-backend
spec:
  selector:
    app: reservationinfo-app
  type: ClusterIP
  clusterIP: 172.20.10.130
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
